# gurobi-logtools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dashboard.md  LICENSE  MANIFEST.in  Makefile  README.md  grblogtools.ipynb  gurobi-logtools.ipynb  logextract.py  pyproject.toml  setup.cfg  setup.py  test.xlsx  tox.ini
.github/: pull_request_template.md
.github/workflows/: python-ci.yml  python-publish.yml  python-tox.yml
data/: batch
scripts/: generate-all-defaults.sh  generate-defaults.py
src/grblogtools/: __init__.py  __main__.py  api.py  barrier_parser.py  cli.py  continuous_parser.py  grblogtools.py  header_parser.py  helpers.py  nodelog.py  norel.py  parser_helpers.py  plotting.py  presolve_parser.py  simplex_parser.py  single_log_parser.py  termination.py
src/grblogtools/defaults/: 810.json  901.json  911.json  950.json
src/grblogtools/parameters/: __init__.py  pretty.py
src/grblogtools/parameters/data/: 800.json  902.json  912.json  952.json  descriptions.json
src/grblogtools/parsers/: barrier.py  continuous.py  header.py  nodelog.py  norel.py  presolve.py  simplex.py  single_log.py  termination.py  util.py
src/gurobi_logtools/: __init__.py  __main__.py  api.py  cli.py  colors.py  constants.py  gurobi_colors.py  helpers.py  plotting.py
src/gurobi_logtools/parameters/: __init__.py  defaults.py  pretty.py
src/gurobi_logtools/parameters/data/: 1001.json  1002.json  1102.json  1200.json  1203.json  1300.json  910.json  950.json  951.json  952.json
src/gurobi_logtools/parsers/: barrier.py  continuous.py  crossover.py  header.py  logwarnings.py  multiobj.py  nlbarrier.py  nodelog.py  norel.py  pdhg.py  presolve.py  pretree_solutions.py  quality.py  simplex.py  single_log.py  single_log_base.py  solvewarnings.py  termination.py  util.py  warnings.py
src/logextract/: __init__.py  __main__.py  logextract.py  setup.py
tests/: helpers.py  test_api.py  test_api_multiobjective.py  test_barrier.py  test_continuous_parser.py  test_cuts.py  test_fill_defaults.py  test_header_parser.py  test_load.py  test_modeltypes.py  test_nodelog.py  test_norel.py  test_numerics.py  test_plotting.py  test_presolve_parser.py  test_refactor_regression.py  test_single_log_parser.py  test_termination.py  test_treesearch.py
tests/assets/: nodelog.feather  summary.feather
tests/parsers/: test_barrier.py  test_continuous.py  test_crossover.py  test_header.py  test_logwarnings.py  test_multiobjective.py  test_nlbarrier.py  test_nodelog.py  test_norel.py  test_pdhg.py  test_presolve.py  test_pretreesols.py  test_simplex.py  test_single_log.py  test_solvewarnings.py  test_termination.py  test_util.py
