[metadata]
name = grblogtools
version = attr: grblogtools.__version__
description = Gurobi log file tools for parsing and exploring data
long_description = file: README.md
long_description_content_type = text/markdown
author = Gurobi Optimization, LLC
author_email = support@gurobi.com
license = Apache-2.0
license_file = LICENSE
platforms = any
url = https://github.com/Gurobi/grblogtools
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    ipywidgets
    numpy
    pandas
    plotly
    xlsxwriter
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
grblogtools.parameters.data = *.json
