[metadata]
name = gurobi-logtools
version = attr: gurobi_logtools.__version__
description = Gurobi log file tools for parsing and exploring data
long_description = file: README.md
long_description_content_type = text/markdown
author = Gurobi Optimization, LLC
author_email = support@gurobi.com
license = Apache-2.0
license_file = LICENSE
platforms = any
url = https://github.com/Gurobi/gurobi-logtools
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    ipywidgets
    numpy
    pandas
    plotly
    xlsxwriter
    nbformat>=4.2.0
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
gurobi_logtools.parameters.data = *.json
